--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
 
     <body>
-        <twitch-stream channel="wardiii"></twitch-stream>
+        <twitch-stream channel="wardiii" muted></twitch-stream>
         <script src="src/twitch-stream.js" type="module"></script>
     </body>
 </html>
