Further update of readme

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <img src="twitch-stream.png" />
             <h2>A Twitch Stream Web Component</h2>
             <div id="stream-area">
-                <twitch-stream width="100%" channel="ESL_SC2" muted></twitch-stream>
+                <twitch-stream width="100%" channel="ESL_SC2" muted chat></twitch-stream>
             </div>
 
             <input type="text" />
