--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
                         <td>Boolean</td>
                         <td>Add 'allowfullscreen="false"' to disallow fullsreen viewing</td>
                     </tr>
+                    <tr>
+                        <td>Parent</td>
+                        <td>String</td>
+                        <td>
+                            Only required if your site is embedded on any domain(s) other than the one that instantiates
+                            the Twitch Embed e.g. "codesandbox.io"
+                        </td>
+                    </tr>
                 </tbody>
             </table>
 
